# sopel-respects

./: .gitignore  Makefile  README.md  f.py  pyproject.toml
sopel_respects/: plugin.py
